# bank-pulse-by-kiro-1

./: EXECUTIVE_SUMMARY.md  H8_DATASET_INTRODUCTION.md  IDEA.md  IMPLEMENTATION_CHECKLIST.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md
bankpulse/: .env.example  .gitignore  README.md  check_data.py  debug_download.py  inspect_xml.py  main.py  pyproject.toml  test_setup.py
bankpulse/bankpulse/: __init__.py  ai_assistant.py  analytics.py  api.py  config.py  data_loader.py  database.py
bankpulse/static/: index.html
